<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".Fragments.Pembayaran">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="@string/detail_bus"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:layout_width="412dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bus"/>


            <FrameLayout
                android:layout_width="360dp"
                android:layout_height="380dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_kotak"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/garuda_c"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="27dp"
                    android:text="@string/ac_biasa"
                    android:textColor="#808080"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:text="@string/informasi_utama"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="85dp"
                    android:background="@drawable/ic_baseline_calendar_today_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="87dp"
                    android:text="@string/minggu_27_maret_2022"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="120dp"
                    android:background="@drawable/ic_baseline_airline_seat_recline_normal_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="122dp"
                    android:text="@string/_1_kursi"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="155dp"
                    android:background="@drawable/ic_buss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="157dp"
                    android:text="@string/mangkutana_makassar"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="195dp"
                    android:text="@string/fasilitas"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="220dp"
                    android:background="@drawable/ic_baseline_power_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="222dp"
                    android:text="@string/stop_kontak"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="255dp"
                    android:background="@drawable/ic_baseline_airline_seat_legroom_extra_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="257dp"
                    android:text="@string/sandaran_kaki"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="290dp"
                    android:background="@drawable/ic_baseline_shopping_bag_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="292dp"
                    android:text="@string/bagasi"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="325dp"
                    android:background="@drawable/ic_baseline_ac_unit_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="327dp"
                    android:text="@string/ac"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="360dp"
                android:layout_height="85dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_kotak"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/total"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="280dp"
                    android:text="@string/_1"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="300dp"
                    android:background="@drawable/ic_baseline_person_24" />

                <Button
                    android:layout_width="140dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/shape_text_harga"
                    android:backgroundTint="#FF0000"
                    android:text="@string/rp_147_000"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:strokeColor="#ff0000">

                </Button>

            </FrameLayout>

            <Button
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/bg_button"
                android:text="@string/pilih_kursi"
                app:backgroundTint="#FF0000" />



        </com.google.android.material.appbar.AppBarLayout>
    </ScrollView>

</LinearLayout>