<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        app:elevation="0dp">
        
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:text="@string/detail_penumpang"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/P_tiket"
            android:layout_width="340dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_kotak"
            android:padding="10dp">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/ic_buss" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:text="Minggu, 27 Maret 2022"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:layout_marginStart="7dp"
                android:text="Mangkutana -> Makassar"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginStart="7dp"
                android:text="@string/_17_00_03_00"
                android:textColor="#808080"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginStart="7dp"
                android:text="@string/garuda_c_ac_biasa"
                android:textColor="#808080"
                android:textSize="18sp"
                android:textStyle="normal" />



        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/informasi_penumpang"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="340dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_kotak"
            android:padding="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/nama"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/umur"
                android:inputType="number"
                android:autofillHints="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:hint="@string/kontak"
                android:inputType="phone"
                android:autofillHints="" />

        </FrameLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_button"
            android:text="@string/lanjut_ke_pembayaran"
            app:backgroundTint="#FF0000" />
    </com.google.android.material.appbar.AppBarLayout>


</LinearLayout>



