<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center">

        <ImageView
            android:layout_width="154dp"
            android:layout_height="154dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/garuda" />



        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/inp_username"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="Enter your full name"
            android:paddingLeft="18dp"
            android:background="@drawable/custom_input"/>


        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/inp_passord"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="Enter your Password"
            android:paddingLeft="18dp"
            android:background="@drawable/custom_input"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/bg_button"
            android:text="login"
            app:backgroundTint="#FF0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="atau" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/daftar"
            app:backgroundTint="#FF0000"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>



</LinearLayout>